introducing Ankh-Morpork’s first family

--- a/spec/fixtures/people.yml
+++ b/spec/fixtures/people.yml
@@ -5,3 +5,14 @@
   title: Doctor
   given_names: [Horace]
   surname: Worblehat
+- id: sam
+  title: Sir
+  given_names: [Samuel]
+  surname: Vimes
+- id: sybil
+  title: Lady
+  given_names: [Sybil, Deidre, Olgivanna]
+  surname: Vimes
+- id: young_sam
+  given_names: [Sam]
+  surname: Vimes
